Version 4.0 

Java 8 is required for this release.
Search text box automatically clears after search.
Performance improvements when deleting thousands of objects.
"Delete every object and version" is more stable.
Display improvements for performance testing.
GUI redesign.
Improved tab icon images.
Text Editor - Caret position is set to the beginning of the file.
Added Help menu.
Updated Amazon S3 API to 1.8.11
Cloud Explorer version number is displayed in the title bar.
"Current Bucket" is now in the title bar of the program.
Added exception message for errors when using the build system.
Fixed "Info" button. File size said KB, but it is actually in bytes.
The presigned URL is copied to the clipboard automatically.
The left tabs now have tooltips.

Version 3.5

Editor can now edit file versions.
Image viewer now deselects the image after viewing to make it easier to view next image.
Performance test for uploads.
Performance test for downloads.
Pre-signed URL is now good for 5 hours.
When deleting files, each file is displayed on the screen and does not lock up anymore.


Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.