@@ -16,6 +16,8 @@ Added exception message for errors when using the build system.
 Fixed "Info" button. File size said KB, but it is actually in bytes.
 The presigned URL is copied to the clipboard automatically.
 The left tabs now have tooltips.
+When downloading multiple files in Object Explorer, each one will be downloaded 
+individually rather than spawning a thread for each.
 
 Version 3.5
 
